# rust

./: .gitignore  README.md
2. Programming a guessing game/guessing_game/src/: main.rs
data-science-stuff/: Dockerfile  docker-compose.yml
data-science-stuff/notebooks/.ipynb_checkpoints/: main-checkpoint.ipynb
data-science-stuff/notebooks/src/: db.rs  main.ipynb  main.rs  schema.rs
data-science-stuff/notebooks/src/.ipynb_checkpoints/: main-checkpoint.ipynb
data-science-stuff/notebooks/src/models/: mod.rs  otomoto_data.rs
data-science-stuff/scripts/: start_jupyter.sh
sql_data_loader/: Cargo.toml
sql_data_loader/src/: main.rs
