[package]
name = "sql_data_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] } # Make sure to use the correct version
tokio = { version = "1", features = ["full"] }